# adv-robust-lite

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/c4_fgsm_at_smoke/: metrics.json  train_log.csv
checkpoints/mobilenetv2_standard_seed0/: metrics.json  train_log.csv
checkpoints/preact_resnet18_fgsm_at_seed0/: metrics.json  train_log.csv
checkpoints/preact_resnet18_fgsm_at_seed1/: metrics.json  train_log.csv
checkpoints/preact_resnet18_fixed_mixed_at_seed0/: metrics.json  train_log.csv
checkpoints/preact_resnet18_fixed_mixed_at_seed1/: metrics.json  train_log.csv
checkpoints/preact_resnet18_pgd_at_seed0/: metrics.json  train_log.csv
checkpoints/preact_resnet18_pgd_at_seed1/: metrics.json  train_log.csv
checkpoints/preact_resnet18_standard_seed0/: metrics.json  (+1 more)
configs/: base.yaml
docs/: EXPERIMENT_PLAN.md  REAL_RUN_COMMANDS.md  audit_v2.md  codex_prompt_v2.md  patch_plan_v2.md  ready_for_real_run.md
scripts/: _bootstrap.py  aggregate_results.py  evaluate_attack.py  evaluate_clean.py  make_figures.py  make_nature_figures.py  run_aalite.py  run_all_real.sh  run_autoattack_subset.py  run_diagnostics.py  run_fix_experiments_server.sh  train.py
src/: __init__.py
tests/: test_attacks_smoke.py  test_c1_traps.py  test_c2_best_robust_val.py  test_c3_train_eval_split.py  test_c4_fgsm_rs_co.py  test_c5_subset_id.py  test_c6_apgd_steps_square.py  test_c7_r_lite_scope.py  test_c8_budget_columns.py  test_c9_mode_isolation.py  test_config.py  test_data.py  test_metrics.py  test_models.py  test_training_smoke.py
(+194 files in other folders)
